--- a/2024/package.json
+++ b/2024/package.json
@@ -15,14 +15,15 @@
   "author": "Frazer McIntosh",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^16.11.6",
+    "@types/node": "^22.10.1",
     "aocrunner": "^1.10.0",
     "prettier": "^2.8.0"
   },
   "dependencies": {
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "typescript": "^5.7.2"
   },
   "engines": {
-    "node": ">=16.13.0"
+    "node": ">=22"
   }
 }
