--- a/2024/package.json
+++ b/2024/package.json
@@ -20,7 +20,8 @@
     "prettier": "^2.8.0"
   },
   "dependencies": {
-    "lodash": "^4.17.21",
+    "@types/lodash-es": "^4.17.12",
+    "lodash-es": "^4.17.21",
     "typescript": "^5.7.2"
   },
   "engines": {
