--- a/2024/package.json
+++ b/2024/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@types/lodash-es": "^4.17.12",
+    "lodash": "npm:lodash-es@^4.17.21",
     "lodash-es": "^4.17.21",
     "typescript": "^5.7.2"
   },
